--- a/azure-pipelines-vote.yml
+++ b/azure-pipelines-vote.yml
@@ -51,3 +51,13 @@ stages:
         command: 'push'
         Dockerfile: 'vote/Dockerfile'
         tags: '$(tag)'
+- stage: push
+  displayName: push
+  jobs:
+  - job: push
+    displayName: push
+    steps:
+- task: ShellScript@2
+  inputs:
+    scriptPath: 'scripts/updatek8smanifests.yaml'
+    args: 'vote $imageRepository $ tag'
