--- a/azure-pipelines-vote.yml
+++ b/azure-pipelines-vote.yml
@@ -51,13 +51,13 @@ stages:
         command: 'push'
         Dockerfile: 'vote/Dockerfile'
         tags: '$(tag)'
-- stage: push
-  displayName: push
+- stage: update
+  displayName: update
   jobs:
-  - job: push
-    displayName: push
+  - job: update
+    displayName: update
     steps:
     - task: ShellScript@2
       inputs:
-      scriptPath: 'scripts/updatek8smanifests.yaml'
-      args: 'vote $imageRepository $ tag'
+        scriptPath: 'scripts/updatek8smanifests.yaml'
+        args: 'vote $imageRepository $ tag'
