--- a/azure-pipelines-vote.yml
+++ b/azure-pipelines-vote.yml
@@ -60,4 +60,4 @@ stages:
     - task: ShellScript@2
       inputs:
         scriptPath: 'scripts/updatek8smanifests.yaml'
-        args: 'vote $imageRepository $ tag'
+        args: 'vote $(imageRepository) $ (tag)'
