--- a/azure-pipelines-result.yml
+++ b/azure-pipelines-result.yml
@@ -49,3 +49,13 @@ stages:
         repository: '$(imageRepository)'
         command: 'push'
         tags: '$(tag)'
+- stage: update
+  displayName: update
+  jobs:
+  - job: update
+    displayName: update
+    steps:
+    - task: ShellScript@2
+      inputs:
+        scriptPath: 'scripts/resultk8smanifests.yaml'
+        args: 'vote $(imageRepository) $ (tag)'
