Update azure-pipelines-result.yml for Azure Pipelines

--- a/azure-pipelines-result.yml
+++ b/azure-pipelines-result.yml
@@ -57,5 +57,5 @@ stages:
     steps:
     - task: ShellScript@2
       inputs:
-        scriptPath: 'scripts/resultk8smanifests.yaml'
-        args: 'vote $(imageRepository) $ (tag)'
+        scriptPath: 'scripts/updatek8smanifests.yaml'
+        args: 'result $(imageRepository) $ (tag)'
