--- a/azure-pipelines-result.yml
+++ b/azure-pipelines-result.yml
@@ -57,5 +57,5 @@ stages:
     steps:
     - task: ShellScript@2
       inputs:
-        scriptPath: 'scripts/updatek8smanifests.yaml'
+        scriptPath: 'scripts/updatek8smanifests.sh'
         args: 'result $(imageRepository) $ (tag)'
